src/tests/variable-declarations/4.txt
variable-declarations/4.c:3:13: error: incompatible types when initializing type 'float' using type 'int'
   float a = 8;
             ^
